# plugin_cmake_python

./: README.md
ExaMPM/: main.py
ExaMPM/examples/: CMakeLists.txt  dam_break.cpp  dam_break.hpp  main.cpp
kokkos/: CMakeLists.txt  kokkos_example.hpp  main.cpp  main.py
kokkos_cuda/: CMakeLists.txt  kokkos_example.cpp  kokkos_example.hpp  main.cpp
simple/: CMakeLists.txt  addition.cpp  main.py
